--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </section>
 
         <!-- Projects section -->
-        <section id="projects" class="section-spaced reveal">
+        <section id="projects" class="fullscreen-section reveal">
             <div class="container">
                 <h2>Projects</h2>
                 <div class="project-grid">
