- Try to fir image in project cards and fixed line spacing inside button link

--- a/index.html
+++ b/index.html
@@ -48,13 +48,12 @@
             <div class="container">
                 <h2>Projects</h2>
                 <div class="project-grid">
-                    <!-- Project cards will go here -->
+                    <!-- Project cards go here -->
                     <div class="project-card" data-project="projects/sacrifetus.md">
-                        <!-- Make sure this path is correct -->
                         <img src="assets/images/sacrifetus/SacrifetusIcon.gif" alt="SacrifetusIcon" />
                         <div class="icon-overlay">
+                            <!-- Icons for tools used -->
                             <div class="icon-box">
-                                <!-- Add the icon for the tool you used -->
                                 <img src="assets/images/icons/CppLogo.svg.png" alt="C++" title="C++" />
                             </div>
                             <div class="icon-box">
