- increased padding for button and changed project card size

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <div class="about-content">
                 <h1 class="about-name">Andre Ken De Decker</h1>
                 <p class="about-intro">I'm a <strong> Student Game Developer </strong> currently studying at DAE Howest. This page highlights the projects I've worked on.</p>
-                <p>Languages: [C++, C#] </p>
-                <p>Tools: [Unreal Engine, Unity, Blender, Perforce]</p>
+                <p>Languages: C++, C# </p>
+                <p>Tools: Unreal Engine, Unity, Blender, Perforce</p>
             </div>
         </section>
 
