- Added video banner

--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
     <main>
         <!-- About section -->
         <section id="about" class="fullscreen-section video-bg">
-            <!--<video autoplay muted loop playsinline id="bg-video">-->
-                <!-- To do: add banner here -->
-                <!--<source src="assets/videos/banner.mp4" type="video/mp4">-->
-            <!--</video>-->
+            <video autoplay muted loop playsinline id="bg-video">
+                <source src="assets/videos/Sector42BannerVideo.mp4" type="video/mp4">
+            </video>
             <div class="about-content">
                 <h1 class="about-name">Andre Ken De Decker</h1>
                 <p class="about-intro">I'm a <strong> Student Game Developer </strong> currently studying at DAE Howest. This page highlights the projects I've worked on.</p>
