- Updated button again for itch

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
                 <source src="assets/videos/Sector42BannerVideo.mp4" type="video/mp4">
             </video>
             <div class="about-content">
-                <h1 class="about-name">Andre Ken De Decker</h1>
-                <p class="about-intro">I'm a <strong> Student Game Developer </strong> currently studying at DAE Howest. This page highlights the projects I've worked on.</p>
-                <p>Languages: C++, C# </p>
-                <p>Tools: Unreal Engine, Unity, Blender, Perforce</p>
+                <h1 class="about-name"> Andre Ken De Decker </h1>
+                <p class="about-intro"> I'm a <strong> Game Developer </strong> currently studying at DAE Howest.</p>
+                <p class="about-intro"> This page highlights the projects I have worked on during my studies. </p>
+                <p class="about-intro"> <strong> Languages: C++, C# </strong> </p>
+                <p class="about-intro"> <strong> Tools: Unreal Engine, Unity, Blender, Perforce </strong> </p>
             </div>
         </section>
 
