- Added Find&Cancel into projects

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h2>Projects</h2>
                 <div class="project-grid">
                     <!-- Project cards go here -->
-                    <div class="project-card" data-project="projects/sacrifetus.md">
+                    <div class="project-card" data-project="projects/Sacrifetus.md">
                         <img src="assets/images/sacrifetus/SacrifetusIcon.gif" alt="SacrifetusIcon" />
                         <div class="icon-overlay">
                             <!-- Icons for tools used -->
@@ -64,6 +64,18 @@
                             </div>
                         </div>
                         <h3>Sacrifetus</h3>
+                    </div>
+                    <div class="project-card" data-project="projects/FindAndCancel.md">
+                        <img src="assets/images/findAndCancel/FindAndCancelExplosion.gif" alt="FindAndCancelIcon" />
+                        <div class="icon-overlay">
+                            <div class="icon-box">
+                                <img src="assets/images/icons/CppLogo.svg.png" alt="C++" title="C++" />
+                            </div>
+                            <div class="icon-box">
+                                <img src="assets/images/icons/UnrealLogo.jpg" alt="Unreal" title="Unreal" />
+                            </div>
+                        </div>
+                        <h3>Find&Cancel</h3>
                     </div>
 
                 </div>
