--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                                 <img src="assets/images/icons/P4Logo.jpg" alt="Perforce" title="Perforce" />
                             </div>
                         </div>
-                        <h3>Sacrifetus</h3>
+                        <h3>Sacrifetus Game</h3>
+
                     </div>
                     <div class="project-card" data-project="projects/FindAndCancel.md">
                         <img src="assets/images/findAndCancel/FindAndCancelExplosion.gif" alt="FindAndCancelIcon" />
@@ -75,10 +76,22 @@
                                 <img src="assets/images/icons/UnrealLogo.jpg" alt="Unreal" title="Unreal" />
                             </div>
                         </div>
-                        <h3>Find&Cancel</h3>
+                        <h3>Find&Cancel Game</h3>
                     </div>
 
-                </div>
+                     <div class="project-card" data-project="projects/Sector42.md">
+                         <img src="assets/images/sector42/Sector42Logo.gif" alt="Sector42Icon" />
+                         <div class="icon-overlay">
+                             <div class="icon-box">
+                                 <img src="assets/images/icons/UnrealLogo.jpg" alt="Unreal" title="Unreal" />
+                             </div>
+                             <div class="icon-box">
+                                 <img src="assets/images/icons/BlenderLogo.png" alt="Blender" title="Blender" />
+                             </div>
+                         </div>
+                         <h3>Sector42 Environment</h3>
+                     </div>
+            </div>
             </div>
         </section>
 
