-Added Shield Arise as a project

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                             </div>
                         </div>
                         <h3>Sacrifetus Game</h3>
-
                     </div>
+
                     <div class="project-card" data-project="projects/FindAndCancel.md">
                         <img src="assets/images/findAndCancel/FindAndCancelExplosion.gif" alt="FindAndCancelIcon" />
                         <div class="icon-overlay">
@@ -79,19 +79,33 @@
                         <h3>Find&Cancel Game</h3>
                     </div>
 
-                     <div class="project-card" data-project="projects/Sector42.md">
-                         <img src="assets/images/sector42/Sector42Logo.gif" alt="Sector42Icon" />
-                         <div class="icon-overlay">
-                             <div class="icon-box">
-                                 <img src="assets/images/icons/UnrealLogo.jpg" alt="Unreal" title="Unreal" />
-                             </div>
-                             <div class="icon-box">
-                                 <img src="assets/images/icons/BlenderLogo.png" alt="Blender" title="Blender" />
-                             </div>
-                         </div>
-                         <h3>Sector42 Environment</h3>
-                     </div>
-            </div>
+                    <div class="project-card" data-project="projects/Sector42.md">
+                        <img src="assets/images/sector42/Sector42Logo.gif" alt="Sector42Icon" />
+                        <div class="icon-overlay">
+                            <div class="icon-box">
+                                <img src="assets/images/icons/UnrealLogo.jpg" alt="Unreal" title="Unreal" />
+                            </div>
+                            <div class="icon-box">
+                                <img src="assets/images/icons/BlenderLogo.png" alt="Blender" title="Blender" />
+                            </div>
+                        </div>
+                        <h3>Sector42 Environment</h3>
+                    </div>
+
+                    <div class="project-card" data-project="projects/ShieldArise.md">
+                        <img src="assets/images/shieldArise/ShieldArise_Icon.gif" alt="ShieldAriseIcon" />
+                        <div class="icon-overlay">
+                            <div class="icon-box">
+                                <img src="assets/images/icons/Unity.jpg" alt="Unity" title="Unity" />
+                            </div>
+                            <div class="icon-box">
+                                <img src="assets/images/icons/C_sharp.png" alt="C#" title="C#" />
+                            </div>
+                        </div>
+                        <h3>Shield Arise Game</h3>
+                    </div>
+
+                </div>
             </div>
         </section>
 
