--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h2>Projects</h2>
                 <div class="project-grid">
                     <!-- Project cards go here -->
-                    <div class="project-card" data-project="projects/Sacrifetus.md">
+                    <div class="project-card" data-project="projects/sacrifetus.md">
                         <img src="assets/images/sacrifetus/SacrifetusIcon.gif" alt="SacrifetusIcon" />
                         <div class="icon-overlay">
                             <!-- Icons for tools used -->
@@ -103,6 +103,16 @@
                             </div>
                         </div>
                         <h3>Shield Arise Game</h3>
+                    </div>
+
+                    <div class="project-card" data-project="projects/3D_Diorama.md">
+                        <img src="assets/images/3d1Diorama/3D1_Loop.gif" alt="3D_DioramaIcon" />
+                        <div class="icon-overlay">
+                            <div class="icon-box">
+                                <img src="assets/images/icons/BlenderLogo.png" alt="Blender" title="Blender" />
+                            </div>
+                        </div>
+                        <h3>3D Diorama</h3>
                     </div>
 
                 </div>
