Updated the layout of the website and added a picture of myself

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <img src="assets/images/shieldArise/ShieldArise_Icon.gif" alt="ShieldAriseIcon" />
                         <div class="icon-overlay">
                             <div class="icon-box">
-                                <img src="assets/images/icons/Unity.jpg" alt="Unity" title="Unity" />
+                                <img src="assets/images/icons/Unity.png" alt="Unity" title="Unity" />
                             </div>
                             <div class="icon-box">
                                 <img src="assets/images/icons/C_sharp.png" alt="C#" title="C#" />
@@ -120,14 +120,20 @@
         </section>
 
         <!-- Contact section -->
-        <section id="contact" class="fullscreen-section reveal">
+        <section id="contact" class="section-spaced reveal">
             <div class="container">
                 <h2>Contact</h2>
                 <p>Email: <a href="mailto:dedeckerken@gmail.com">dedeckerken@gmail.com</a></p>
                 <p>LinkedIn: <a href="https://www.linkedin.com/in/ken-de-decker-ab51532ab/" target="_blank" rel="noopener noreferrer">https://www.linkedin.com/in/ken-de-decker-ab51532ab/</a></p>
-                <!-- Add other contact links like GitHub, etc. -->
             </div>
         </section>
+
+
+        <!-- Picture of me -->
+        <section class="profile-section reveal">
+            <img src="assets/icons/PortfolioKen.jpg" alt="Andre Ken De Decker" class="profile-picture">
+        </section>
+
     </main>
 
     <footer>
