Updated website picture with correct file path

--- a/index.html
+++ b/index.html
@@ -128,10 +128,9 @@
             </div>
         </section>
 
-
         <!-- Picture of me -->
-        <section class="profile-section reveal">
-            <img src="assets/icons/PortfolioKen.jpg" alt="Andre Ken De Decker" class="profile-picture">
+        <section class="fullscreen-section reveal">
+            <img src="assets/images/icons/PortfolioKen.jpg" alt="Andre Ken De Decker" class="profile-picture">
         </section>
 
     </main>
