Updated wrong class for picture

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </section>
 
         <!-- Contact section -->
-        <section id="contact" class="section-spaced reveal">
+        <section id="contact" class="fullscreen-section reveal">
             <div class="container">
                 <h2>Contact</h2>
                 <p>Email: <a href="mailto:dedeckerken@gmail.com">dedeckerken@gmail.com</a></p>
@@ -129,7 +129,7 @@
         </section>
 
         <!-- Picture of me -->
-        <section class="fullscreen-section reveal">
+        <section class="profile-section reveal">
             <img src="assets/images/icons/PortfolioKen.jpg" alt="Andre Ken De Decker" class="profile-picture">
         </section>
 
