Added Programming 4 Game Engine as project

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p class="about-intro"> I'm a <strong> Game Developer </strong> currently studying at DAE Howest.</p>
                 <p class="about-intro"> This page highlights the projects I have worked on during my studies. </p>
                 <p class="about-intro"> <strong> Languages: C++, C# </strong> </p>
-                <p class="about-intro"> <strong> Tools: Unreal Engine, Unity, Blender, Perforce </strong> </p>
+                <p class="about-intro"> <strong> Tools: Unreal Engine, Unity, Blender, Perforce, Github </strong> </p>
             </div>
         </section>
 
@@ -64,6 +64,16 @@
                             </div>
                         </div>
                         <h3>Sacrifetus Game</h3>
+                    </div>
+
+                    <div class="project-card" data-project="projects/GameEngine_MsPacman.md">
+                        <img src="assets/images/GameEngine_MsPacman/MsPacman_Logo.gif" alt="GameEngineIcon" />
+                        <div class="icon-overlay">
+                            <div class="icon-box">
+                                <img src="assets/images/icons/CppLogo.svg.png" alt="C++" title="C++" />
+                            </div>
+                        </div>
+                        <h3>C++ Game Engine / Ms.Pacman</h3>
                     </div>
 
                     <div class="project-card" data-project="projects/FindAndCancel.md">
