--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </video>
             <div class="about-content">
                 <h1 class="about-name"> Andre Ken De Decker </h1>
-                <p class="about-intro"> I'm a <strong> Game Developer </strong> currently studying at DAE Howest.</p>
+                <p class="about-intro"> I am a graduating <strong> Game Developer </strong> specializing in <strong> Gameplay Programming </strong>, available for a full-time internship starting from mid-February 2026.</p>
                 <p class="about-intro"> This website highlights the projects I have worked on during my studies. </p>
                 <p class="about-intro"> <strong> Languages: C++, C# </strong> </p>
                 <p class="about-intro"> <strong> Tools: Unreal Engine, Unity, Blender, Perforce, Github </strong> </p>
